# Ableton-MCP-Server

./: .gitignore  README.md  pyproject.toml  requirements.txt
chibe_mcp/: __init__.py  run_http.py  run_sse.py  run_stdio.py  run_uvicorn.py  server.py
chibe_remote_script/: __init__.py
examples/: dre_beat.py
